--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 /Employee.class
 /MyPoint.class
-/OOPJ_4.class
-/OOPJ_2.class
-/OOPJ_5.class
-/Square.class
 /Shape.class
 /Triangle.class
+/Square.class
 /Circle.class
-/OOPJ_6.class
-/Rectangle.class
 /Resizable.class
+/Rectangle.class
+/OOPJ_1a.class
+/OOPJ_1b.class
+/OOPJ_1c.class
+/OOPJ_2.class
+/OOPJ_3.class
+/OOPJ_4.class
+/OOPJ_5.class
+/OOPJ_6.class
