--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /OOPJ_4.class
 /OOPJ_5.class
 /OOPJ_6.class
+/test.java
+/test.class
+/Base1.class
+/ChildOfDerived.class
+/Derived.class
+/Derived1.class
