Created viva1 and viva2

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 /ChildOfDerived.class
 /Derived.class
 /Derived1.class
+/Department.class
+/Loan_Information.class
+/Student.class
+/UGstudent.class
+/viva1.class
+/viva2.class
