--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@
 /FulltimeJob.class
 /Job.class
 /ParttimeJob.class
+/Cube.class
+/Cuboid.class
+/OOPJ_7.class
+/Sphere.class
+/viva3.class
+/DivisionByZero.class
+/InvalidInput.class
