Fixed OOPJ_2 to add to matrix

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@
 /viva3.class
 /DivisionByZero.class
 /InvalidInput.class
+/ArrayOutofBounds.class
+/excep_array.class
+/MyClass.class
+/excep_array.java
+/MyInterface.class
+/null_pointer_excep.class
+/null_pointer_excep.java
+/NullPointer.class
+OOPJ_7_throw.class
+/test.java
